--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,11 +212,11 @@ else()
 endif()
 
 # Check for Mathematica
-find_package(Mathematica 10.0)
-if(Mathematica_FOUND AND NOT DEFINED Mathematica_Invalid_License)
-  find_library(LIBUUID NAMES uuid)
-  if(LIBUUID)
-    message("   Found library libuuid")
+find_library(LIBUUID NAMES uuid)
+if(LIBUUID)
+  message("   Found library libuuid")
+  find_package(Mathematica 10.0)
+  if(Mathematica_FOUND AND NOT DEFINED Mathematica_Invalid_License)
     message("${BoldYellow}   Found Mathematica.${ColourReset}")
     if(Mathematica_WSTP_FOUND)
       message("${BoldYellow}   Found Wolfram Symbolic Transfer Protocol. Mathematica backends enabled.${ColourReset}")
@@ -227,13 +227,15 @@ if(Mathematica_FOUND AND NOT DEFINED Mathematica_Invalid_License)
       message("${BoldRed}  WSTP not found. Please make sure it is installed before attempting to use Mathematica backends.${ColourReset}")
       set(HAVE_MATHEMATICA 0)
     endif()
+  elseif(DEFINED Mathematica_Invalid_License)
+    message("${BoldRed} Mathematica found but with an invalid license. Backends using Mathematica will be disabled.${ColourReset}") 
   else()
-    message("${BoldRed}   Missing library libuuid required for WSTP. Mathematica will be disabled.${ColourReset}")
+    message("${BoldRed}   Mathematica not found. Backends using Mathematica will be disabled.${ColourReset}")
     set(HAVE_MATHEMATICA 0)
   endif()
 else()
-  message("${BoldRed}   Mathematica not found. Backends using Mathematica will be disabled.${ColourReset}")
-  set(HAVE_MATHEMATICA 0)
+ message("${BoldRed}   Missing library libuuid required for WSTP. Mathematica will be disabled.${ColourReset}")
+ set(HAVE_MATHEMATICA 0)
 endif()
 
 # Check for DL libraries
