--- a/yaml_files/DarkBit_MSSM7.yaml
+++ b/yaml_files/DarkBit_MSSM7.yaml
@@ -313,7 +313,7 @@ Rules:
   # values from the GAMBIT decay table (internal_decays=false).
   - function: MicrOmegas_MSSM_3_6_9_2_init
     options:
-       internal_decays: true
+       internal_decays: false
        VZdecay: 1 # 0 - no 3 body final states, 1 - virtual Z in annihilations, 2 - virtual Z in coannihilations
        VWdecay: 1 # 0 - no 3 body final states, 1 - virtual W in annihilations, 2 - virtual W in coannihilations
 
@@ -379,11 +379,11 @@ Rules:
       # If the below is false, the squark propagator is approximated as 1/m_sq^2
       # (automatically set to true if loop = true)
       # pole: false
-    function: DD_couplings_MicrOmegas
-    options:
-      # If the below is true, the box diagram for gluon-neutralino scattering as 
-      # discussed in arXiv:0803.2360 is included in the calculation
-      loop: box
+    #function: DD_couplings_MicrOmegas
+    #options:
+    #  # If the below is true, the box diagram for gluon-neutralino scattering as 
+    #  # discussed in arXiv:0803.2360 is included in the calculation
+    #  loop: box
 
   # Nuclear SI Parameter Likelihoods (All values in MeV)
   - capability: lnL_SI_nuclear_parameters
