--- a/yaml_files/CosmoBit_planck_TT.yaml
+++ b/yaml_files/CosmoBit_planck_TT.yaml
@@ -1,5 +1,7 @@
 ##########################################################################
-## MultiNest version of minimal - CosmoBit application (in YAML)
+## Minimal CosmoBit application  (in YAML)
+##   - Using the Planck-TT likelihood for high-l
+##   - Using Multinest as sampler
 ##
 ## Selim Hotinli <selim.hotinli14@imperial.ac.uk>
 ## 2016-17
@@ -13,7 +15,6 @@
 Parameters:
 
   LCDM:
-
     omega_b:
       prior_type: flat
       range: [0.020,0.024]
@@ -33,8 +34,7 @@ Parameters:
       prior_type: flat
       range: [0.05,0.10]
 
-  plik_dx11dr2_HM_v18_TT:
-
+  Planck_TT:
     A_cib_217:
       prior_type: flat
       range: [45.0,75]
@@ -97,8 +97,8 @@ Scanner:
   scanners:
     multinest:
       plugin: multinest
-      like:  Likelihood
-      nlive: 500
+      like:  LogLike
+      nlive: 10
       tol: 0.1
       aux_printer_txt_options:
       aux_printer_stats_options:
@@ -106,16 +106,30 @@ Scanner:
 
 #======== Observables of interest ========
 ObsLikes:
-  - purpose:      Likelihood
-    capability:   compute_vanilla_lowp_TT_loglike
+  - purpose:      LogLike
+    capability:   compute_strawberry_high_TT_loglike
     module:       CosmoBit
     type:         double
+
+  - purpose:      LogLike
+    capability:   compute_strawberry_lensing_loglike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
+    capability:   compute_strawberry_lowp_TT_loglike
+    module:       CosmoBit
+    type:         double
+
 
 #======== Rule entries ========
 Rules:
 
+## So far there are none
+   
+
 #======== Logging setup ========
-Logger:
+Lxogger:
   redirection:
     [Default]      : "default.log"
     [CosmoBit]  : "CosmoBit.log"
@@ -124,7 +138,7 @@ Logger:
 #======== Generic Name/Value Section ========
 KeyValues:
 
-  default_output_path: "runs/CosmoBit_multinest"
+  default_output_path: "runs/CosmoBit_planck_TT"
 
   rng: ranlux48
 
