--- a/yaml_files/CosmoBit_planck_TTTEEE.yaml
+++ b/yaml_files/CosmoBit_planck_TTTEEE.yaml
@@ -1,5 +1,7 @@
 ##########################################################################
-## MultiNest version of minimal - CosmoBit application (in YAML)
+## Minimal CosmoBit application  (in YAML)
+##   - Using the Planck-TTTEEE likelihood for high-l
+##   - Using Multinest as sampler
 ##
 ## Selim Hotinli <selim.hotinli14@imperial.ac.uk>
 ## 2016-17
@@ -13,7 +15,6 @@
 Parameters:
 
   LCDM:
-
     omega_b:
       prior_type: flat
       range: [0.020,0.024]
@@ -33,8 +34,7 @@ Parameters:
       prior_type: flat
       range: [0.05,0.10]
 
-  plik_dx11dr2_HM_v18_TT:
-
+  Planck_TTTEEE:
     A_cib_217:
       prior_type: flat
       range: [45.0,75]
@@ -73,10 +73,58 @@ Parameters:
     gal545_A_217:
       prior_type: flat
       range: [70.0,90.0]
+    galf_EE_A_100:
+      prior_type: flat
+      range: [0.0,0.4]
+    galf_EE_A_100_143:
+      prior_type: flat
+      range: [0.0,0.1]
+    galf_EE_A_100_217:
+      prior_type: flat
+      range: [0.0,0.3]
+    galf_EE_A_143:
+      prior_type: flat
+      range: [0.0,0.2]
+    galf_EE_A_143_217:
+      prior_type: flat
+      range: [0.0,0.5]
+    galf_EE_A_217:
+      prior_type: flat
+      range: [0.0,2.0]
+    galf_EE_index:
+      fixed_value: -2.4
+    galf_TE_A_100:
+      prior_type: flat
+      range: [0.0,0.4]
+    galf_TE_A_100_143:
+      prior_type: flat
+      range: [0.0,0.4]
+    galf_TE_A_100_217:
+      prior_type: flat
+      range: [0.0,0.7]
+    galf_TE_A_143:
+      prior_type: flat
+      range: [0.0,0.4]
+    galf_TE_A_143_217:
+      prior_type: flat
+      range: [0.0,0.7]
+    galf_TE_A_217:
+      prior_type: flat
+      range: [0.0,3.0]
+    galf_TE_index:
+      fixed_value: -2.4
     calib_100T:
       fixed_value: 0.999
     calib_217T:
       fixed_value: 0.995
+    calib_100P:
+      fixed_value: 1.0
+    calib_143P:
+      fixed_value: 1.0
+    calib_217P:
+      fixed_value: 1.0
+    A_pol:
+      fixed_value: 1.0
     A_planck:
       fixed_value: 1.0
 
@@ -97,8 +145,8 @@ Scanner:
   scanners:
     multinest:
       plugin: multinest
-      like:  Likelihood
-      nlive: 500
+      like:  LogLike
+      nlive: 10
       tol: 0.1
       aux_printer_txt_options:
       aux_printer_stats_options:
@@ -106,16 +154,30 @@ Scanner:
 
 #======== Observables of interest ========
 ObsLikes:
-  - purpose:      Likelihood
-    capability:   compute_vanilla_lowp_TT_loglike
+  - purpose:      LogLike
+    capability:   compute_strawberry_high_TT_loglike
     module:       CosmoBit
     type:         double
+
+  - purpose:      LogLike
+    capability:   compute_strawberry_lensing_loglike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
+    capability:   compute_strawberry_lowp_TT_loglike
+    module:       CosmoBit
+    type:         double
+
 
 #======== Rule entries ========
 Rules:
 
+## So far there are none
+   
+
 #======== Logging setup ========
-Logger:
+Lxogger:
   redirection:
     [Default]      : "default.log"
     [CosmoBit]  : "CosmoBit.log"
@@ -124,7 +186,7 @@ Logger:
 #======== Generic Name/Value Section ========
 KeyValues:
 
-  default_output_path: "runs/CosmoBit_multinest"
+  default_output_path: "runs/CosmoBit_planck_TTTEEE"
 
   rng: ranlux48
 
