--- a/yaml_files/DiracDM_test.yaml
+++ b/yaml_files/DiracDM_test.yaml
@@ -8,59 +8,43 @@
 
 Parameters:
 
-  StandardModel_SLHA2:
-    alphainv:  1.279008161E+02 # alpha^{-1}(mZ)^MSbar
-    GF      :  1.1663753920E-05 # G_Fermi
-    alphaS  :  1.18500000E-01 # alpha_s(mZ)^MSbar
-    mZ      :  9.11876000E+01 # mZ(pole)
-    mBmB    :  4.18000000E+00 # mb(mb)^MSbar
-    mT      :  1.730000E+02 # mtop(pole)
-    mTau    :  1.77682000E+00 # mtau(pole)
-    mNu3    :               0 # mnu3(pole)
-    mE      :  5.10998928E-04 # melectron(pole)
-    mNu1    :               0 # mnu1(pole)
-    mMu     :  1.05658E-01 # mmuon(pole)
-    mNu2    :               0 # mnu2(pole)
-    mD      :  4.80000000E-03 # md(2 GeV)^MSbar
-    mU      :  2.30000000E-03 # mu(2 GeV)^MSbar
-    mS      :  9.50000000E-02 # ms(2 GeV)^MSbar
-    mCmC    :  1.27500000E+00 # mc(mc)^MSbar
-    CKM_lambda  :  0.22537
-    CKM_A       :  0.814
-    CKM_rhobar  :  0.117
-    CKM_etabar  :  0.353
-    theta12 :  0.58376 # solar angle
-    theta23 :  0.76958 # atmospheric mixing angle
-    theta13 :  0.15495 #
-    delta13 :  0       # Dirac CP-violating phase
-    alpha1  :  0       # first Majorana CP-violating phase
-    alpha2  :  0
+  # SM parameters.
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan.yaml
 
-  StandardModel_Higgs:
-    mH: 125
-
-  DiracDM:
-    mF: 250.
-    lF: 1e-2
-    cosXI: 1.0
-
+  # Nuclear matrix parameters.
   nuclear_params_sigmas_sigmal:
-    sigmas: 40
-    sigmal: 58
+    sigmas:
+      range: [19, 67]
+    sigmal:
+      range: [31, 85]
     deltau:  0.842
     deltad:  -0.427
     deltas:  -0.085
 
+  StandardModel_Higgs:
+    mH:
+      range: [124.1, 127.3]
+
   Halo_gNFW_rho0:
-    rho0: 0.4
-    v0: 220.0
-    vrot: 220.0
-    vesc: 540.0
+    rho0:
+      range: [0.2, 0.8]
+    v0: 235.0
+    vesc: 550.0
+    vrot: 235.0
     rs: 20.0
     r_sun: 8.5
     alpha: 1
     beta: 3
     gamma: 1
+
+  DiracDM:
+    mF: 
+      range: [45., 10000.]
+    lF: 
+      range: [1e-4, 10]
+      prior_type: log
+    cosXI:
+      range: [0, 1]
 
 ##############################################################################################
 Priors:
@@ -70,38 +54,73 @@ Priors:
 ##############################################################################################
 ObsLikes:
 
-    - capability: IC79_loglike
+    # LHC likelihoods
+    - capability: lnL_Higgs_invWidth
+      purpose: LogLike
+      
+    # Precision physics likelihoods
+    - capability: lnL_h_mass
       purpose:    LogLike
 
-    # LHC likelihoods
-    #- capability: lnL_Higgs_invWidth
-    #  purpose: LogLike
-
     # Dark matter likelihoods
-    #- capability: lnL_oh2
-    #  purpose:    LogLike
+    - capability: lnL_oh2
+      purpose:    LogLike
 
-    #- capability: lnL_FermiLATdwarfs
-    #  purpose:    LogLike
+    - capability: lnL_FermiLATdwarfs
+      purpose:    LogLike
 
-    #- capability: LUX_2013_LogLikelihood
-    #  purpose:    LogLike
+    - capability: XENON100_2012_LogLikelihood
+      purpose:    LogLike
+
+    - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
+
+    - capability: LUX_2015_LogLikelihood
+      purpose:    LogLike
+
+    - capability: LUX_2016_LogLikelihood
+      purpose:    LogLike
+
+    - capability: PandaX_2016_LogLikelihood
+      purpose:    LogLike
+
+    - capability: SuperCDMS_2014_LogLikelihood
+      purpose:    LogLike
+      
+    - capability: IC79_loglike
+      purpose:    LogLike
+      
+    # SI nuclear nuisance parameter likelihood
+    - capability: lnL_SI_nuclear_parameters
+      purpose:    LogLike
+
+    # DM Local Halo likelihoods
+    - capability: lnL_rho0
+      purpose: LogLike
+
+    # SM nuisance parameter likelihoods
+    - capability: lnL_t_mass
+      purpose:    LogLike
+      
+    - capability: lnL_alpha_s
+      purpose:    LogLike
 
     # Other observables
-    # - purpose:    Observable
-    #   capability: RD_oh2
+    - purpose:    Observable
+      capability: RD_oh2
 
-    # - purpose:    Observable
-    #   capability: mwimp
+    - purpose:    Observable
+      capability: mwimp
 
-    # - purpose:    Observable
-    #   capability: sigmav
+    - purpose:    Observable
+      capability: sigmav
 
-    # - purpose:    Observable
-    #   capability: sigma_SI_p
+    # Explicitly select velocity dependent SI/SD cross sections.
+    - purpose:    Observable
+      capability: sigma_SI_p
 
-    # - purpose:    Observable
-    #   capability: sigma_SI_n
+    - purpose:    Observable
+      capability: sigma_SI_n
 
 ##############################################################################################
 Rules:
@@ -109,20 +128,16 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
+    
+  # Use the DarkBit native calculator for the relic density
+  - capability: RD_oh2
+    function: RD_oh2_general
     options:
-      oh2_obs: 0.1199
-      oh2_obserr: 0.0027
+      fast: 1
 
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
-    function: RD_fraction_rescaled
-
-  # Use micrOmegas backend function to calculate the relic density
-  - capability: RD_oh2
-    function: RD_oh2_MicrOmegas
-    options:
-      fast: 1
-      Beps: 1e-5
+    function: RD_fraction_leq_one
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamLike
   - capability: lnL_FermiLATdwarfs
@@ -130,9 +145,9 @@ Rules:
     options:
      non_self_conjugate: true
 
-  # Choose to use micrOMEGAs yield tables for indirect detection
+  # Choose to use DarkSUSY yield tables for indirect detection
   - capability: SimYieldTable
-    function: SimYieldTable_MicrOmegas
+    function: SimYieldTable_DarkSUSY
     options:
       allow_yield_extrapolation: true
 
@@ -143,32 +158,33 @@ Rules:
   # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
     function: all_decays
-
+    
+  - capability: Higgs_decay_rates
+    function: DiracDM_Higgs_decays
+    
   # Choose to get the spectrum from SpecBit proper, not an SLHA file.
   - capability: DiracDM_spectrum
     function: get_DiracDM_spectrum
 
-
   # Choose where to take the capture rate from
   - capability: capture_rate_Sun
-    function: capture_rate_Sun_const_xsec
+    #function: capture_rate_Sun_const_xsec
     #function: capture_rate_Sun_const_xsec_capgen
-    #function: capture_rate_Sun_vnqn
-    module: DarkBit
-
+    function: capture_rate_Sun_vnqn
+    
+  
 ##############################################################################################
 Printer:
 
   printer: hdf5
 
   options:
-    output_file: "DDM_test.hdf5"
-    group: "/DDM"
-    delete_file_on_restart: true
+    output_file: "DiracDM_test.hdf5"
+    group: "/DiracDM"
 
 ##############################################################################################
 Scanner:
-  use_scanner: random
+  use_scanner: de
 
   scanners:
 
@@ -181,9 +197,9 @@ Scanner:
     de:
       plugin: diver
       like: LogLike
-      NP: 200
+      NP: 50000
       verbosity: 1
-      convthresh: 0.2
+      convthresh: 0.0001
 
     tw:
       plugin: twalk
@@ -220,4 +236,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e5
     debug: true
 
-  default_output_path: "chains/"
+  default_output_path: "runs/DiracDM"
