--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,31 @@ foreach(module yaml os re datetime sys getopt shutil itertools)
   find_python_module(${module} REQUIRED)
 endforeach()
 
+# Check for pybind11
+set(MIN_pybind11_VERSION "2.2.0")
+set(PREFERRED_pybind11_VERSION "2.2.1")
+set(pybind11_CONTRIB_DIR "${PROJECT_SOURCE_DIR}/contrib/pybind11")
+find_package(pybind11 QUIET)
+if(NOT pybind11_FOUND AND EXISTS "${pybind11_CONTRIB_DIR}")
+  use_contributed_pybind11()
+endif()
+if(pybind11_FOUND)
+  if(pybind11_VERSION VERSION_LESS MIN_pybind11_VERSION)
+    message("${BoldRed}   Found pybind11 ${pybind11_VERSION}. GAMBIT requires at least v${MIN_pybind11_VERSION}.${ColourReset}")
+    set(pybind11_FOUND FALSE)
+  else()
+    message("${BoldYellow}   Found pybind11 ${pybind11_VERSION} at ${pybind11_DIR}.${ColourReset}")
+  endif()
+else()
+  message("${BoldRed}   The pybind11 library is not properly installed.${ColourReset}")
+endif()
+if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
+  message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
+  execute_process(COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
+  execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
+  use_contributed_pybind11()
+endif()
+
 # Check for axel
 find_program(axel_FOUND axel)
 if(axel_FOUND)
