Macro modifications in support of Python backends 	modified:   Backends/include/gambit/Backends/backend_macros.hpp 	modified:   Backends/include/gambit/Backends/common_macros.hpp 	modified:   Backends/include/gambit/Backends/frontend_macros.hpp 	new file:   Backends/include/gambit/Backends/interoperability.hpp 	new file:   Backends/include/gambit/Backends/interoperability_macros.hpp 	modified:   Backends/include/gambit/Backends/mathematica_macros.hpp 	modified:   Backends/include/gambit/Backends/mathematica_variable.hpp 	modified:   CMakeLists.txt 	modified:   Elements/include/gambit/Elements/ini_functions.hpp 	modified:   Elements/src/ini_functions.cpp 	modified:   Utils/include/gambit/Utils/util_macros.hpp 	modified:   cmake/cmake_variables.hpp.in 	modified:   config/backend_locations.yaml.default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,7 @@ if(pybind11_FOUND)
     set(pybind11_FOUND FALSE)
   else()
     message("${BoldYellow}   Found pybind11 ${pybind11_VERSION} at ${pybind11_DIR}.${ColourReset}")
+    include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
   endif()
 else()
   message("${BoldRed}   The pybind11 library is not properly installed.${ColourReset}")
@@ -134,7 +135,9 @@ if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
   execute_process(COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
   execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
   use_contributed_pybind11()
+    include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
 endif()
+set(HAVE_PYBIND11 "${pybind11_FOUND}")
 
 # Check for axel
 find_program(axel_FOUND axel)
