Major refactoring of backend system to reduce macro usage, simplify code and generally make it easier to support backends in different languages in the future. 	modified:   Backends/include/gambit/Backends/backend_info.hpp 	modified:   Backends/include/gambit/Backends/backend_macros.hpp 	modified:   Backends/include/gambit/Backends/backend_types/gm2calc_1_2_0/identification.hpp 	modified:   Backends/include/gambit/Backends/frontends/DDCalc_1_1_0.hpp 	modified:   Backends/include/gambit/Backends/frontends/nulike_1_0_5.hpp 	modified:   Backends/include/gambit/Backends/frontends/nulike_1_0_6.hpp 	modified:   Backends/include/gambit/Backends/ini_functions.hpp 	modified:   Backends/include/gambit/Backends/mathematica_macros.hpp 	modified:   Backends/include/gambit/Backends/mathematica_variable.hpp 	modified:   Backends/include/gambit/Backends/python_macros.hpp 	modified:   Backends/src/backend_info.cpp 	modified:   Core/src/ini_functions.cpp 	modified:   Elements/CMakeLists.txt 	modified:   Elements/include/gambit/Elements/ini_functions.hpp 	modified:   Elements/src/ini_functions.cpp 	modified:   Utils/include/gambit/Utils/type_macros.hpp

--- a/Elements/CMakeLists.txt
+++ b/Elements/CMakeLists.txt
@@ -19,6 +19,7 @@ set(source_files src/decay_table.cpp
                  src/functors.cpp
                  src/higgs_couplings_table.cpp
                  src/ini_functions.cpp
+                 src/ini_catch.cpp
                  src/mssm_slhahelp.cpp
                  src/slhaea_helpers.cpp
                  src/sminputs.cpp
@@ -38,6 +39,7 @@ set(header_files include/gambit/Elements/decay_table.hpp
                  include/gambit/Elements/ini_code_struct.hpp
                  include/gambit/Elements/ini_code_struct.hpp
                  include/gambit/Elements/ini_functions.hpp
+                 include/gambit/Elements/ini_catch.hpp
                  include/gambit/Elements/module_macros_common.hpp
                  include/gambit/Elements/module_macros_incore.hpp
                  include/gambit/Elements/module_macros_inmodule.hpp
