Added semi-pathological example of needing to load two versions of the same Python backend (which doesn't yet work properly). 	renamed:    Backends/examples/libsecond.py -> Backends/examples/libsecond/1.0/libsecond.py 	new file:   Backends/examples/libsecond/1.1/libsecond.py 	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_0.hpp 	new file:   Backends/include/gambit/Backends/frontends/LibSecond_1_1.hpp 	modified:   config/backend_locations.yaml.default 	modified:   config/capabilities.dat 	modified:   yaml_files/Python_test.yaml

--- a/yaml_files/Python_test.yaml
+++ b/yaml_files/Python_test.yaml
@@ -60,8 +60,8 @@ Rules:
 
   - capability:  nevents_postcuts
     backends:
-    - {capability: awesomeness, backend: LibSecond}
-    - {capability: someFunction, backend: LibSecond}
+    - {capability: awesomeness, backend: LibSecond, version: 1.1}
+    - {capability: someFunction, backend: LibSecond, version: 1.1}
 
   - capability:  function_pointer
     backends:
