Partial progress in properly accessing Python backend variables. 	modified:   Backends/examples/libsecond/1.0/libsecond.py 	modified:   Backends/examples/libsecond/1.1/libsecond.py 	modified:   Backends/include/gambit/Backends/interoperability_macros.hpp 	modified:   Backends/include/gambit/Backends/mathematica_variable.hpp 	modified:   Backends/include/gambit/Backends/python_macros.hpp 	modified:   Backends/include/gambit/Backends/python_variable.hpp 	modified:   Core/src/depresolver.cpp 	modified:   Elements/include/gambit/Elements/functors.hpp 	modified:   Elements/src/type_equivalency.cpp 	modified:   ExampleBit_B/include/gambit/ExampleBit_B/ExampleBit_B_rollcall.hpp 	modified:   ExampleBit_B/src/ExampleBit_B.cpp 	modified:   Utils/include/gambit/Utils/util_functions.hpp 	modified:   Utils/src/util_functions.cpp 	modified:   config/backend_locations.yaml.default 	modified:   config/capabilities.dat 	modified:   config/resolution_type_equivalency_classes.yaml 	modified:   yaml_files/Python_test.yaml

--- a/yaml_files/Python_test.yaml
+++ b/yaml_files/Python_test.yaml
@@ -62,6 +62,7 @@ Rules:
     backends:
     - {capability: awesomeness, backend: LibSecond, version: 1.1}
     - {capability: someFunction, backend: LibSecond, version: 1.1}
+    - {capability: SomeInt, backend: LibSecond, version: 1.1}
 
   - capability:  function_pointer
     backends:
