--- a/yaml_files/DiracDM_test.yaml
+++ b/yaml_files/DiracDM_test.yaml
@@ -118,6 +118,7 @@ ObsLikes:
     # Explicitly select velocity dependent SI/SD cross sections.
     - purpose:    Observable
       capability: sigma_SI_p
+      function: sigma_SI_vnqn_FermionDMHiggsPortal
 
     - purpose:    Observable
       capability: sigma_SI_n
@@ -168,8 +169,6 @@ Rules:
 
   # Choose where to take the capture rate from
   - capability: capture_rate_Sun
-    #function: capture_rate_Sun_const_xsec
-    #function: capture_rate_Sun_const_xsec_capgen
     function: capture_rate_Sun_vnqn
     
   
