Tidied up a few tests and standalones. 	modified:   Backends/include/gambit/Backends/frontends/LibFirst_1_1.hpp 	modified:   ColliderBit/examples/ColliderBit_standalone_example.cpp 	modified:   DarkBit/examples/DarkBit_standalone_MSSM.cpp 	modified:   DarkBit/examples/DarkBit_standalone_SingletDM.cpp 	modified:   DecayBit/examples/3bithit.cpp 	modified:   config/backend_locations.yaml.default 	renamed:    yaml_files/spartan_CMSSM.yaml -> yaml_files/spartan_NUHM1.yaml

--- a/yaml_files/spartan_NUHM1.yaml
+++ b/yaml_files/spartan_NUHM1.yaml
@@ -8,9 +8,12 @@
 
 Parameters:
 
-  CMSSM:
+  NUHM1:
     A0: [10.0, -100.0, 1]
     M0:
+      prior_type: log
+      range: [0.001,1000]
+    mH:
       prior_type: log
       range: [0.001,1000]
     M12:
@@ -101,6 +104,9 @@ Rules:
     type: int
     dependencies:
     - {capability: particle_id, module: ExampleBit_B}
+    backends:
+    - {capability: awesomeness, backend: LibFirst, version: 1.1}
+    - {capability: someFunction, backend: LibFirst, version: 1.1}
 
   - capability:    xsection
     options:
