Added flag for allowing MC convergence to be achieved via a single SR 	modified:   ColliderBit/include/gambit/ColliderBit/MC_convergence.hpp 	modified:   ColliderBit/src/ColliderBit_eventloop.cpp 	modified:   ColliderBit/src/MC_convergence.cpp 	modified:   yaml_files/CMSSM_convergence_test.yaml

--- a/yaml_files/CMSSM_convergence_test.yaml
+++ b/yaml_files/CMSSM_convergence_test.yaml
@@ -356,6 +356,7 @@ Rules:
       events_between_convergence_checks: [1000]
       target_fractional_uncert: [0.3]
       halt_when_systematic_dominated: true
+      all_SR_must_converge: false
 
   # Define Monte Carlo event simulator and associated options.
   - capability:  HardScatteringSim
