--- a/yaml_files/SN_dev.yaml
+++ b/yaml_files/SN_dev.yaml
@@ -115,7 +115,7 @@ Scanner:
     multinest:
       plugin: multinest
       like: LogLike
-      nlive: 10000
+      nlive: 100
 
 ObsLikes:
 
@@ -242,4 +242,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: true
 
-  default_output_path: "runs/SN_dev_no_Kamland_2/"
+  default_output_path: "runs/SN_dev/"
