--- a/yaml_files/CosmoBit_planck_TTTEEE.yaml
+++ b/yaml_files/CosmoBit_planck_TTTEEE.yaml
@@ -8,125 +8,16 @@
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2017, Nov
+## 2018, Jan
 ##########################################################################
 
 
 #======== Input parameter declarations =======
 Parameters:
 
-  LCDM:
-    omega_b:
-      prior_type: flat
-      range: [0.020,0.024]
-    omega_cdm:
-      prior_type: flat
-      range: [0.010,0.13]
-    H0:
-      prior_type: flat
-      range: [66,74]
-    ln10A_s:
-      prior_type: flat
-      range: [2.9,3.2]
-    n_s:
-      prior_type: flat
-      range: [0.9,1.10]
-    tau_reio:
-      prior_type: flat
-      range: [0.05,0.10]
+  LCDM: !import include/LCDM_scan.yaml
 
-  Planck_TTTEEE:
-    A_cib_217:
-      prior_type: flat
-      range: [45.0,75]
-    cib_index:
-      fixed_value: -1.3
-    xi_sz_cib:
-      prior_type: flat
-      range: [0.0,1.0]
-    A_sz:
-      prior_type: flat
-      range: [3.0,11.0]
-    ps_A_100_100:
-      prior_type: flat
-      range: [170.0,270.0]
-    ps_A_143_143:
-      prior_type: flat
-      range: [25.0,50.0]
-    ps_A_143_217:
-      prior_type: flat
-      range: [25.0,45.0]
-    ps_A_217_217:
-      prior_type: flat
-      range: [80.0,120.0]
-    ksz_norm:
-      prior_type: flat
-      range: [8.0,11.0]
-    gal545_A_100:
-      prior_type: flat
-      range: [7.0,11.0]
-    gal545_A_143:
-      prior_type: flat
-      range: [7.0,11.0]
-    gal545_A_143_217:
-      prior_type: flat
-      range: [15.0,26.0]
-    gal545_A_217:
-      prior_type: flat
-      range: [70.0,90.0]
-    galf_EE_A_100:
-      prior_type: flat
-      range: [0.0,0.4]
-    galf_EE_A_100_143:
-      prior_type: flat
-      range: [0.0,0.1]
-    galf_EE_A_100_217:
-      prior_type: flat
-      range: [0.0,0.3]
-    galf_EE_A_143:
-      prior_type: flat
-      range: [0.0,0.2]
-    galf_EE_A_143_217:
-      prior_type: flat
-      range: [0.0,0.5]
-    galf_EE_A_217:
-      prior_type: flat
-      range: [0.0,2.0]
-    galf_EE_index:
-      fixed_value: -2.4
-    galf_TE_A_100:
-      prior_type: flat
-      range: [0.0,0.4]
-    galf_TE_A_100_143:
-      prior_type: flat
-      range: [0.0,0.4]
-    galf_TE_A_100_217:
-      prior_type: flat
-      range: [0.0,0.7]
-    galf_TE_A_143:
-      prior_type: flat
-      range: [0.0,0.4]
-    galf_TE_A_143_217:
-      prior_type: flat
-      range: [0.0,0.7]
-    galf_TE_A_217:
-      prior_type: flat
-      range: [0.0,3.0]
-    galf_TE_index:
-      fixed_value: -2.4
-    calib_100T:
-      fixed_value: 0.999
-    calib_217T:
-      fixed_value: 0.995
-    calib_100P:
-      fixed_value: 1.0
-    calib_143P:
-      fixed_value: 1.0
-    calib_217P:
-      fixed_value: 1.0
-    A_pol:
-      fixed_value: 1.0
-    A_planck:
-      fixed_value: 1.0
+  Planck_TTTEEE: !import include/Planck_TTTEEE_scan.yaml
 
 #======== Prior setup ========
 Priors:
@@ -146,11 +37,16 @@ Scanner:
     multinest:
       plugin: multinest
       like:  LogLike
-      nlive: 10
-      tol: 0.1
+      nlive: 1000
+      tol: 0.01
       aux_printer_txt_options:
       aux_printer_stats_options:
       aux_printer_live_options:
+
+    random:
+      plugin: random
+      point_number: 5
+      like:  LogLike
 
 #======== Observables of interest ========
 ObsLikes:
@@ -169,12 +65,10 @@ ObsLikes:
     module:       CosmoBit
     type:         double
 
-
 #======== Rule entries ========
 Rules:
 
 ## So far there are none
-   
 
 #======== Logging setup ========
 Lxogger:
